<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_items_tv_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardMaxElevation="4dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/poster_movie"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title_movie"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/card_view_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="8dp"
            android:text="@string/yyyy_mm_dd"
            android:textAlignment="textStart"
            android:textColor="@android:color/primary_text_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ic_date"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <ImageView
            android:id="@+id/ic_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:contentDescription="@string/date"
            android:src="@drawable/ic_date_range_black_24dp"
            app:layout_constraintStart_toEndOf="@+id/card_view_poster"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:srcCompat="@drawable/ic_date_range_black_24dp" />

        <TextView
            android:id="@+id/vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="8dp"
            android:text="Vote Average"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/card_view_poster"
            app:layout_constraintTop_toBottomOf="@+id/ic_date" />

        <TextView
            android:id="@+id/vote_average_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/genres_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/card_view_poster"
            app:layout_constraintTop_toBottomOf="@+id/vote" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>